fix: max width of gif the gif will now not go out of bounds in smaller windows

--- a/styles.css
+++ b/styles.css
@@ -72,4 +72,5 @@ body{
 
  .confused_gif{
      margin: auto;
+     max-width: 95vw;
  }
